<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/nsv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_new_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_news"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_new_tittle_situation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/title_situation_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_new_tittle_situation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_new_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/description_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_new_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="200" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_new_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp">

                <AutoCompleteTextView
                    android:id="@+id/edit_new_address"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:completionThreshold="1"
                    android:hint="@string/address_edit"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_role_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/what_service_need"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_role_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_fire_department_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r_btn_fire_department">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_ambulance_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r_btn_ambulance">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_police_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r_btn_police">

                </com.google.android.material.radiobutton.MaterialRadioButton>

            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/level_of_danger"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_one">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_two">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_three">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_four">

                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/r_btn_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_five">

                </com.google.android.material.radiobutton.MaterialRadioButton>

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:enabled="false"
                android:text="@string/create_news" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>